@@ -106,6 +106,7 @@ t/local/37_asn1_time.t
 t/local/38_priv-key.t
 t/local/39_pkcs12.t
 t/local/40_npn_support.t
+t/local/41_alpn_support.t
 t/local/50_digest.t
 t/local/61_threads-cb-crash.t
 t/local/62_threads-ctx_new-deadlock.t
